# dungeon-game

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
src/: common.c  common.h  game.c  game.h  main.c  map.c  map.h  player.c  player.h
tests/: game.cpp  main.cpp  map.cpp  player.cpp
tests/assets/: map_correct.map  map_incorrect_height.map  map_incorrect_invalid.map  map_incorrect_unfinished_file.map  map_incorrect_width.map
